testsuite/negative/bug-1194.n
_ = "" ""; //OK
_ = """";  // W: auto-concatenated string
